--- a/src/App.css
+++ b/src/App.css
@@ -49,10 +49,18 @@
 /*  }*/
 /*}*/
 
-body{
-  background: url("images/backTestVirus.gif") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+/*body{*/
+/*  background: url("images/backTestVirus.gif") no-repeat center center fixed;*/
+/*  -webkit-background-size: cover;*/
+/*  -moz-background-size: cover;*/
+/*  -o-background-size: cover;*/
+/*  background-size: cover;*/
+/*}*/
+
+
+.welcomePageCss {
+    background: url("images/backTestVirus.gif") no-repeat; background-size: cover;
+    position: absolute;
+    width: 100% !important;
+    height: 100% !important;
 }
