feat: pridanie/úprava prepočítavania kompartmentov -pridanie 4 funkcií na prepočet SIRD -pridanie funkcie na volanie SIRD funkcií -úprava intervalu (prepočet krajín) a optimalizácia stránky(setovanie pre všetky krajiny len raz v intervaly)

--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@
 
 
 .welcomePageCss {
-    background: url("images/backTestVirus.gif") no-repeat; background-size: cover;
+    background: url("images/virusBackground.gif") no-repeat; background-size: cover;
     position: absolute;
     width: 100% !important;
     height: 100% !important;
