--- a/src/components/mapContainer/MapContainer.css
+++ b/src/components/mapContainer/MapContainer.css
@@ -1,18 +1,18 @@
-html {
-    font-family: system-ui, sans-serif;
-    font-size: 1.25rem;
-}
+/*html {*/
+/*    font-family: system-ui, sans-serif;*/
+/*    font-size: 1.25rem;*/
+/*}*/
 
-body {
-    margin: 0;
-}
+/*body {*/
+/*    margin: 0;*/
+/*}*/
 
 svg {
     display: inline-block;
     vertical-align: middle;
 }
 
-.App {
-    font-family: sans-serif;
-    text-align: center;
-}
+/*.App {*/
+/*    font-family: sans-serif;*/
+/*    text-align: center;*/
+/*}*/
