fix: zmena css main page (optimalizovanie komponentov)

--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,8 @@
 /*}*/
 
 
+/*html, body {margin: 0; height: 100%; overflow: hidden}*/
+
 .welcomePageCss {
     background: url("images/virusBackground.gif") no-repeat; background-size: cover;
     position: absolute;
