--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@
 /*html, body {margin: 0; height: 100%; overflow: hidden}*/
 
 .welcomePageCss {
-    background: url("images/virusBackground.gif") no-repeat; background-size: cover;
+    background: url("images/virusBackground.gif") ; background-size: cover;
     position: absolute;
     width: 100% !important;
     height: 100% !important;
