fix: drobné estetické úpravy

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .welcomePageCss {
-    background: url("images/virusBackground.gif");
+    background: url("images/bluredVirusMicroscope.gif");
     background-size: cover;
     position: absolute;
     width: 100% !important;
